--- a/front/src/components/common/button/button.css
+++ b/front/src/components/common/button/button.css
@@ -23,3 +23,14 @@
     width: 100%;
     color: #fff;
 }
+
+.btn_point_t3 {
+    display: inline-block;
+    background: #ffa600;
+    padding: 5px 10px;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 11px;
+    flex: 0 1 auto;
+    
+}
